# cpp_template

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Conan.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  main.cpp  thing.cpp  thing.hpp
src/sdl/: CMakeLists.txt
test/: CMakeLists.txt  tests.cpp
